# Pithy

./: .gitignore  README.md
create-models/create-bart-onnx/: create-bart-onnx.py
inference/: Cargo.toml  README.md
inference-net/: Program.cs  inference-net.csproj
inference-python/: README.md  inference-fast.py  inference-premade.py  inference.py
inference/src/: main.rs  ml.rs
inference/src/ml/summarisation/: mod.rs
inference/src/ml/tokenize/: mod.rs
inference/src/ml/utils/: mod.rs  model_utils.rs  tokenizer_utils.rs
